--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,8 +1,13 @@
 eclipse.preferences.version=1
+encoding//HebPF/dao/pi=UTF-8
+encoding//HebPF/dao/pi/IPIButtonConfigTypeDAO.java=UTF-8
+encoding//HebPF/dto/pi=UTF-8
+encoding//HebPF/dto/pi/PIButtonConfigTypeDTO.java=UTF-8
+encoding//HebPF/dto/pi/PIFormConfigTypeDTO.java=UTF-8
+encoding//HebPF/dto/pi/PIProcessDTO.java=UTF-8
 encoding//WebContent/contact/contactList.jsp=GBK
 encoding//src/com/llb=GBK
 encoding//src/com/llb/util/DbManager.java=GBK
 encoding//src/com/llb/util/Pagination.java=GBK
 encoding//src/com/llb/work/dao/ContactsDAO.java=GBK
 encoding//src/com/llb/work/dto/ContactsDTO.java=GBK
-encoding/<project>=GBK
