--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,6 +5,8 @@ encoding//HebPF/dto/pi=UTF-8
 encoding//HebPF/dto/pi/PIButtonConfigTypeDTO.java=UTF-8
 encoding//HebPF/dto/pi/PIFormConfigTypeDTO.java=UTF-8
 encoding//HebPF/dto/pi/PIProcessDTO.java=UTF-8
+encoding//WebContent/category/springMVC/jsp/input.jsp=UTF-8
+encoding//WebContent/category/springMVC/jsp/show.jsp=UTF-8
 encoding//WebContent/contact/contactList.jsp=GBK
 encoding//src/com/llb=GBK
 encoding//src/com/llb/util/DbManager.java=GBK
